# fast-obsidian-mcp

./: .gitignore  README.md  SKILL.md  pyproject.toml
obsidian_mcp/: server.py
