[project]
name = "fast-obsidian-mcp"
version = "0.1.1"
description = "Thin MCP server wrapping the Obsidian CLI"
requires-python = ">=3.11"
dependencies = ["fastmcp>=3.0"]

[project.scripts]
obsidian-mcp = "obsidian_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["obsidian_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
